<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="363dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_imageview"
        android:text="@string/login"
        android:textSize="32sp"
        android:textColor="@color/primary"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:orientation="vertical">

        <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/primary"
        android:textColorHint="@color/textHint"
        tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/primary"
        android:textColorHint="@color/textHint"
        tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@color/accept"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@color/primary"
            android:text="@string/register"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>
