<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignInActivity">

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- Cuadro para la imagen del usuario -->
    <ImageView
        android:id="@+id/user_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/user"
        android:layout_below="@id/register_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <!-- Campo para introducir el nombre -->
    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_below="@id/user_image"
        android:textColor="@color/primary"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <!-- Campo para introducir el apellido -->
    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_below="@id/name_input"
        android:textColor="@color/primary"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <!-- Campo para introducir el nombre de usuario -->
    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:layout_below="@id/last_name_input"
        android:textColor="@color/primary"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <!-- Campo para introducir el correo electrónico -->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_below="@id/username_input"
        android:textColor="@color/primary"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <!-- Campo para introducir la contraseña -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_below="@id/email_input"
        android:textColor="@color/primary"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <!-- Campo para repetir la contraseña -->
    <EditText
        android:id="@+id/repeat_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_below="@id/password_input"
        android:textColor="@color/primary"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <!-- Botón para registrarse -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/accept"
        android:textColor="@color/white"
        android:layout_below="@id/repeat_password_input"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <!-- Botón para ir a la pantalla de inicio de sesión -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/primary"
        android:textColor="@color/white"
        android:layout_below="@id/register_button"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

</RelativeLayout>